test/e2e/features/agentgateway/jwtauth/testdata/secured-route-with-rbac.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-secure
  namespace: agentgateway-base
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "secureroute.com"
  rules:
    - backendRefs:
        - name: backend
          port: 80
---
# jwks were generated using hack/utils/jwt/jwt-generator.go
apiVersion: gateway.kgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: route-policy
  namespace: agentgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: route-secure
  traffic:
    authorization:
      action: Allow
      policy:
        matchExpressions:
          - 'jwt.sub == "ignore@kgateway.dev"'
    jwtAuthentication:
      mode: Strict
      providers:
      - issuer: https://kgateway.dev
        jwks:
          inline: '{"keys":[{"use":"sig","kty":"RSA","kid":"6199783057790440763","n":"0VsRlUTAJuh-y-HHdtYDHZ64dBPh0OukIunXTzdCdlGBRsqdxp6yM8-NyUOd1knC220CqHjivu45EcLWFEfBGtoTGux6Um-qwuLOhtoI_83ipgXE6jl05aLv1O36FjwmBUVJ1beTNIFOa5pceC4Cvv_F-gVdaJwIWsz8TLkWLTIkKPOEWvPGshcCeP--5r-SwymqcebC8ZGOf1J1LMoCCoWj1o_DMcz889A13o_s82ZEtV5ssZm4DiXtk_C3SA91x7BoRMFbj5Pd0ampeoNVOjQnjfK0kMu6rMHgbLUbxKCwiQ7sP6zUuQIePi8Uvxu3nQb5czjvq96wBY5ZjMJevQ","e":"AQAB","x5c":["MIIC3jCCAcagAwIBAgIBJzANBgkqhkiG9w0BAQsFADAXMRUwEwY [...]
