test/e2e/features/agentgateway/jwtauth/testdata/secured-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-secure
spec:
  parentRefs:
    - name: super-gateway
  hostnames:
    - "secureroute.com"
  rules:
    - backendRefs:
        - name: backend-0
          port: 8080
---
# jwks were generated using hack/utils/jwt/jwt-generator.go
apiVersion: gateway.kgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: route-policy
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: route-secure
  traffic:
    jwtAuthentication:
      mode: Strict
      providers:
      - issuer: https://solo.io
        jwks:
          inline: '{"keys":[{"use":"sig","kty":"RSA","kid":"9126925024517527692","n":"yyls-P4DV3rg5QhjmlK5WUtjv5CPiwoRcqjYuCne_mYk_1LDZ0donYeS05C-sRI_3p2DzdZerZ85_O6K__4D3T0dxjSi6vgVQjmYEzWThAL9N50ljv-Gmuh8V9Fps7WNje_vkVA3nQ7v-nVQLsOa3aw8uY1tHgpTQLxYb9ZGORQHGfmJZHQ_VwbtJiX0JZ4DtKN4znDe7uwUmokHdOV0Xao3aIb57qAyn5CNHV9fJaKFKJW-BVx_g3BYibXB-IMvBsjh-V-MJBwECWPLRTzxHohI2oAyV6k-tQG-rP8Bo8nvkgWDfYhf6JDYTE8lBG1fuHjr2yxMk42646QFaDwePQ","e":"AQAB","x5c":["MIIC1DCCAbygAwIBAgIBWjANBgkqhkiG9w0BAQsFADASMRAwDgY [...]
      - issuer: https://solo.io
        jwks:
          inline: '{"keys":[{"use":"sig","kty":"RSA","kid":"451894257799681235","n":"qWsLNmexrMycsV8zhBIQ9W5EX_zloPveO-o6ggWKL1fSI3vhAGWIO5ZiYdl32qnSGAKFWKZIfRnvwmPYrxvMHpqAvM8NwNt92rwKN7e2rc-zL8XyJ6CxQY5lLlKoQDB48vjXIu2uP7h7xnCvom18SakDazA3950vBX3RUKZhUgMTp3EZ4dbwFEXtJRiYrmUeai2v0liffP2Sc3kG8xjh_tbFEExL4ugTQrvvs5tIcw_-xnBCIUNJ7S_U6zVadVBffQInaB0vGNWoDqw4l6Y1hjnG-o3M38vDmkOMzGemxC3q6dKzwHW5xVmoDIJI6OxHOYM35K42cxM602DEH95qDQ","e":"AQAB","x5c":["MIIC1DCCAbygAwIBAgIBHjANBgkqhkiG9w0BAQsFADASMRAwDgYD [...]
